--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">MealPrepPlanner</string>
     <string name="action_settings">Settings</string>
+    <string name="meals">Meals</string>
+    <string name="shopping_list">Shopping List</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
