--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="shopping_list">Shopping List</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_search">SearchActivity</string>
+    <string name="emptyMealsList">No Meals to Eat!</string>
+    <string name="emptyShoppingList">No Shopping to Do!</string>
 </resources>
