--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="title_activity_search">SearchActivity</string>
     <string name="emptyMealsList">No Meals to Eat!</string>
     <string name="emptyShoppingList">No Shopping to Do!</string>
-    <string name="delete">DELETE</string>
+    <string name="remove">REMOVE</string>
 </resources>
