slight code clean up
Fixed the layout of MealInfo, and some import in MainActivity and general code clean up in Database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="emptyShoppingList">No Shopping to Do!</string>
 
     <string name="remove">REMOVE</string>
+    <string name="add_meal_change_serving">Add Meal / Change Serving</string>
+    <string name="recipe_goes_here">Recipe Goes Here:</string>
 </resources>
